Zico - Events homepage spacing/font fixes

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_events.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_events.scss
@@ -407,7 +407,7 @@ ul.nav-card-events-list {
 
     .home-page-row {
         .event-header {
-            margin: 10px 0 15px 5px;
+            margin: 10px 0 15px 15px;
         }
 
         .event-button {
